--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = me.mjk134
+	archives_base_name = project-sigma
 
 # Dependencies
 	fabric_version=0.47.8+1.18.2
+	plasmid_version=0.5+1.18.2-SNAPSHOT
