--- a/src/main/resources/project-sigma.mixins.json
+++ b/src/main/resources/project-sigma.mixins.json
@@ -4,9 +4,9 @@
   "package": "me.mjk134.sigma.mixin",
   "compatibilityLevel": "JAVA_17",
   "mixins": [
+    "ServerPlayerEntityMixin"
   ],
   "client": [
-
   ],
   "injectors": {
     "defaultRequire": 1
