Fix LivesManager and add weakness from killing animals

--- a/src/main/resources/project-sigma.mixins.json
+++ b/src/main/resources/project-sigma.mixins.json
@@ -4,6 +4,7 @@
   "package": "me.mjk134.sigma.mixin",
   "compatibilityLevel": "JAVA_17",
   "mixins": [
+    "LivingEntityMixin",
     "ServerPlayerEntityMixin"
   ],
   "client": [
