NetherCommand and OverworldCommand finished + added back lastCoords in Player.java

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
 
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation 'xyz.nucleoid:fantasy:0.4.5+1.18.2'
+	modImplementation include('xyz.nucleoid:fantasy:0.4.5+1.18.2')
+
 }
 
 processResources {
